--- a/example/index.html
+++ b/example/index.html
@@ -1,12 +1,8 @@
 <html>
   <head>
-    <title></title>
+    <title>observeOnScope example</title>
   </head>
   <body>
     <app-root>loading...</app-root>
-    <script src="../node_modules/rx/dist/rx.js"></script>
-    <script src="../node_modules/angular/angular.js"></script>
-    <script src="../dist/observeOnScope.js"></script>
-    <script src="js/app.js"></script>
   </body>
 </html>
